--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     .attribution {
       font-size: 11px;
       text-align: center;
-display: block;
+display: inline-block;
+      position: absolute;
     }
 
     .attribution a {
